# Gravitas

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
inc/: Camera.hpp  Debugger.hpp  Gui.hpp  ImGUI.hpp  Mesh.hpp  Model.hpp  MousePicking.hpp  Plane.hpp  Ray.hpp  Shader.hpp  WorldTransform.hpp  camera.h  grid.h  mesh.h  model.h  old-mouse.hpp  ray.h  use-imgui.h
physics/: AABB.hpp  BoundingSphere.hpp  BroadPhase.hpp  Collider.hpp  ConvexHull.cpp  ConvexHull.h  ConvexHull.hpp  DynamicBVH.hpp  HalfEdgeMesh.hpp  MeshBuilder.hpp  OBB.hpp  Octree.hpp  PhysicsEngine.h  PhysicsEngine.hpp  QuickHull.cpp  QuickHull.hpp  RigidBody.h  RigidBody.hpp  SAT.hpp  old.cpp  old.hpp  old1.hpp  p.hpp  world.hpp
shaders/: cube_fragment.glsl  cube_vertex.glsl  debug.vert  grid.frag  grid.vert  lightObject.frag  lightObject.vert  lightSource.frag  lightSource.vert  lighting.vert  osm.frag  osm.vert  path_point.frag  path_point.vert  pickingColor.frag  stencilOutline.frag  stencilOutline.vert
src/: Gravitas.cpp  Gravitas.hpp  old.cpp  old_gravitas.cpp  old_gravitas.hpp  physics-test.cpp  physics-test.hpp  picking-test.cpp  picking-test.hpp  tmp.cpp  tmp.hpp
